fixing the url read only input not being copyable on mobile

--- a/assets/vialink.css
+++ b/assets/vialink.css
@@ -221,6 +221,9 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(242,101,42,.6);
 	float:right;
 	margin-left:20px;	
 }
+#url-field {
+    background-color: #eeeeee;
+}
 /* /////////////////////////   FIM FORM      */
 
 /* /////////////////////////   INICIO TABLE      */
